chore: adds placeholder images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     technical fest with a multitude of events planned over a span of three days, wherein students from XIM University (as well as from other institutes) take part in events like coding contests, technical workshops, guest lectures, and more.">
     <meta name="keywords" content="synchronize, xim synchronize, synchronize xim, synchronizexim, synchronize 3.0, synchronize'25, Time Hacks, Hackathon, Tech Fest, Tech Fest Odisha, XIM University"> 
   <title>Synchronize'25</title>
+  <link rel="preload" href="https://synchronize-web.onrender.com/images/saturn.png" as="image" type="image/png" />
 </head>
 
 <body>
