--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SynChronize is the XIM university's
+    technical fest with a multitude of events planned over a span of three days, wherein students from XIM University (as well as from other institutes) take part in events like coding contests, technical workshops, guest lectures, and more."
+    />
+    <meta
+      name="keywords"
+      content="synchronize, xim synchronize, synchronize xim, synchronizexim, synchronize 3.0, synchronize 2025, Time Hacks, Hackathon, Tech Fest, Tech Fest Odisha, XIM University"
+    />
+    <title>Synchronize'25</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="SynChronize is the XIM university's
-    technical fest with a multitude of events planned over a span of three days, wherein students from XIM University (as well as from other institutes) take part in events like coding contests, technical workshops, guest lectures, and more.">
-    <meta name="keywords" content="synchronize, xim synchronize, synchronize xim, synchronizexim, synchronize 3.0, synchronize'25, Time Hacks, Hackathon, Tech Fest, Tech Fest Odisha, XIM University"> 
-  <title>Synchronize'25</title>
-  <link rel="preload" href="https://synchronize-web.onrender.com/images/saturn.png" as="image" type="image/png" />
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
