chore: image upload

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="synchronize, xim synchronize, synchronize xim, synchronizexim, synchronize 3.0, synchronize 2025, Time Hacks, Hackathon, Tech Fest, Tech Fest Odisha, XIM University"
     />
-    <title>Synchronize'25</title>
+    <title>Synchronize 3.0</title>
   </head>
 
   <body>
